--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ public/Users/Public/**
 !public/Users/Public/Desktop/My PC.url
 !public/Users/Public/Desktop/Public.url
 !public/Users/Public/Desktop/Browser.url
+!public/Users/Public/Desktop/qr_clue.txt
 !public/Users/Public/Documents
 !public/Users/Public/Music
 !public/Users/Public/Pictures
