--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ public/robots.txt
 public/rss.xml
 public/sitemap.xml
 public/.index/*
-public/Users/Public/**
+!public/Users/Public/**
 
 !public/Users/**/desktop.ini
 !public/Users/Public/Desktop
