--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@monaco-editor/loader": "^1.4.0",
     "@panzoom/panzoom": "^4.5.1",
     "@prettier/plugin-xml": "^3.4.1",
+    "@types/react-router-dom": "^5.3.3",
     "@wasmer/wasm-transformer": "^0.12.0",
     "alchemy-sdk": "^3.3.1",
     "ani-cursor": "^0.0.5",
@@ -66,6 +67,7 @@
     "quickjs-emscripten": "^0.29.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-gtag": "^0.0.0",
     "react-rnd": "^10.4.11",
     "resedit": "^2.0.2",
     "rtf.js": "^3.0.9",
