--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext",
-    "types": ["jest", "wicg-file-system-access"]
+    "types": ["jest", "wicg-file-system-access"],
+    "typeRoots": ["types", "node_modules/@types"]
   },
   "exclude": ["node_modules"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
